ESG-2310 updated to use jre11